template-network.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Deploy a VPC"

Parameters:
  Name:
    Description: Enter a name
    Type: String
    Default: No Name
  Cidr:
    Description: Network Cidr block
    Type: String
    Default: 10.0.0.0/20

Resources:
  # Network 
  # Bits: 10=/24, 9=/23, 8=/24, 7=/25, 6=/26, 5=/27 etc
  
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref Cidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Ref Name
        
  PublicSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ""
      VpcId: !Ref VPC
      CidrBlock: !Select [0, !Cidr [!Ref Cidr, 4, 8]]
      Tags:
      - Key: Name
        Value: !Sub "${Name}-public-subnet-az1"

  PublicSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ""
      VpcId: !Ref VPC
      CidrBlock: !Select [1, !Cidr [!Ref Cidr, 4, 8]]
      Tags:
      - Key: Name
        Value: !Sub "${Name}-public-subnet-az2"

  PrivateSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ""
      VpcId: !Ref VPC
      CidrBlock: !Select [2, !Cidr [!Ref Cidr, 4, 8]]
      Tags:
      - Key: Name
        Value: !Sub "${Name}-private-subnet-az1"

  PrivateSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ""
      VpcId: !Ref VPC
      CidrBlock: !Select [3, !Cidr [!Ref Cidr, 4, 8]]
      Tags:
      - Key: Name
        Value: !Sub "${Name}-private-subnet-az2"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${Name}-internet-gateway"

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  EipNatGatewayPrivate01:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EipNatGatewayPrivate02:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  PrivateSubnetRouteTableAz1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${Name}-private-rt-az1"

  PrivateSubnetRouteTableAz2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${Name}-private-rt-az2"

  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${Name}-public-rt"

  PublicSubnetRouteTableAssociationAz1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAz1
      RouteTableId: !Ref PublicSubnetRouteTable

  PublicSubnetRouteTableAssociationAz2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAz2
      RouteTableId: !Ref PublicSubnetRouteTable

  PrivateSubnetRouteTableAssociationAz1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetAz1
      RouteTableId: !Ref PrivateSubnetRouteTableAz1

  PrivateSubnetRouteTableAssociationAz2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetAz2
      RouteTableId: !Ref PrivateSubnetRouteTableAz2

  PublicInternetGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  EipNatGatewayPrivate01:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EipNatGatewayPrivate02:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGatewayAz1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt "EipNatGatewayPrivate01.AllocationId"
      SubnetId: !Ref "PublicSubnetAz1"

  NatGatewayAz2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt "EipNatGatewayPrivate02.AllocationId"
      SubnetId: !Ref "PublicSubnetAz2"

  NatRoutePrivateSubnetAz1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAz1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayAz1

  NatRoutePrivateSubnetAz2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAz2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayAz2

Outputs:
  VpcId:
    Description: VpcId of stack
    Value: !Ref VPC
    Export:
      Name: !Sub "${Name}-vpc-id"

  Cidr:
    Description: Network cidr for VPC
    Value: !Ref Cidr
    Export:
      Name: !Sub "${Name}-cidr"

  PublicSubnetAz1:
    Description: Public Subnet Az1
    Value: !Ref PublicSubnetAz1
    Export:
      Name: !Sub "${Name}-public-subnet-1"

  PublicSubnetAz2:
    Description: Public Subnet Az2
    Value: !Ref PublicSubnetAz2
    Export:
      Name: !Sub "${Name}-public-subnet-2"

  PrivateSubnetAz1:
    Description: Private Subnet Az1
    Value: !Ref PrivateSubnetAz1
    Export:
      Name: !Sub "${Name}-private-subnet-1"

  PrivateSubnetAz2:
    Description: Private Subnet Az2
    Value: !Ref PrivateSubnetAz2
    Export:
      Name: !Sub "${Name}-private-subnet-2"
